--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Utility for taking website screenshots at different viewports.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "screenshots": "node bin/index.js"
   },
   "author": "",
   "license": "ISC",
